--- a/Detail_/Rating_ViewController.xib
+++ b/Detail_/Rating_ViewController.xib
@@ -82,13 +82,13 @@
                         <outlet property="delegate" destination="-1" id="W94-Md-8Or"/>
                     </connections>
                 </collectionView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iWt-uQ-PBz">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iWt-uQ-PBz">
                     <rect key="frame" x="254" y="492" width="50" height="50"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="50" id="6Hf-oz-6VA"/>
                         <constraint firstAttribute="height" constant="50" id="pbt-cc-dQQ"/>
                     </constraints>
-                    <state key="normal" title="Button"/>
+                    <state key="normal" image="icon_rating"/>
                     <connections>
                         <action selector="didPressRate" destination="-1" eventType="touchUpInside" id="y5Y-oF-D5u"/>
                     </connections>
@@ -113,5 +113,6 @@
     <resources>
         <image name="ic_search" width="50.5" height="50.5"/>
         <image name="ico_arrow_l_white" width="33" height="33"/>
+        <image name="icon_rating" width="53" height="47.5"/>
     </resources>
 </document>
