--- a/Tabbar_/Book_List_Header.xib
+++ b/Tabbar_/Book_List_Header.xib
@@ -76,7 +76,7 @@
                         <constraint firstAttribute="width" constant="88" id="RWD-O3-Azq"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
-                    <state key="normal" title="xem thêm" image="ico_aright">
+                    <state key="normal" title="Xem thêm" image="ico_aright">
                         <color key="titleColor" red="0.0078431372550000003" green="0.57254901960000004" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
                 </button>
