--- a/Tabbar_/TG_Release_Cell.xib
+++ b/Tabbar_/TG_Release_Cell.xib
@@ -45,13 +45,13 @@
                         </connections>
                     </collectionView>
                     <button hidden="YES" opaque="NO" alpha="0.0" tag="12" contentMode="scaleToFill" semanticContentAttribute="forceRightToLeft" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Vn-0m-blW">
-                        <rect key="frame" x="224" y="0.0" width="88" height="37"/>
+                        <rect key="frame" x="222" y="0.0" width="90" height="37"/>
                         <constraints>
                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="46" id="4or-I5-YS9"/>
                             <constraint firstAttribute="height" constant="37" id="vnB-b7-coS"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
-                        <state key="normal" title="xem thêm" image="ico_aright">
+                        <state key="normal" title="Xem thêm" image="ico_aright">
                             <color key="titleColor" red="0.0078431372550000003" green="0.57254901960000004" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
                         </state>
                     </button>
