--- a/Tabbar_/TG_Room_Cell_9.xib
+++ b/Tabbar_/TG_Room_Cell_9.xib
@@ -42,13 +42,13 @@
                         </connections>
                     </collectionView>
                     <button opaque="NO" alpha="0.0" tag="12" contentMode="scaleToFill" semanticContentAttribute="forceRightToLeft" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ipz-09-kIs">
-                        <rect key="frame" x="212" y="0.0" width="100" height="37"/>
+                        <rect key="frame" x="209" y="0.0" width="103" height="37"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="37" id="H21-wl-oWg"/>
                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="46" id="mGv-pP-8Ld"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
-                        <state key="normal" title="xem thêm" image="ico_aright">
+                        <state key="normal" title="Xem thêm" image="ico_aright">
                             <color key="titleColor" red="0.0078431372550000003" green="0.57254901960000004" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
                         </state>
                     </button>
